# bennis_toolbox

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  pyproject.toml
_reference/benni_context/: __init__.py  const.py  logic.py  models.py  services.yaml
_reference/benni_media_context/: __init__.py  config_flow.py  const.py  coordinator.py  logic.py  services.py  services.yaml  strings.json
_reference/maw/: const.py  strings.json
_reference/notification_router/: binary_sensor.py  const.py  coordinator.py  strings.json
_reference/plug_policy_engine/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  services.yaml
_reference/stash_ha/: __init__.py  _module_info.json
_reference/title_classifier/: README.md  _module_info.json
custom_components/benni_context/: binary_sensor.py  config_flow.py  coordinator.py  manifest.json  sensor.py  services.py
custom_components/benni_media_context/: binary_sensor.py  manifest.json  sensor.py
custom_components/bennis_toolbox/: __init__.py  _platform_dispatch.py  binary_sensor.py  button.py  calendar.py  config_flow.py  const.py  diagnostics.py  image.py  manifest.json  media_player.py  number.py  select.py  sensor.py  services.py  services.yaml  status.py  storage.py  strings.json  switch.py  websocket_api.py
custom_components/maw/: __init__.py  config_flow.py  helpers.py  image.py  manifest.json  media_player.py
docs/: architecture.md  hacs_installation.md  migration.md  module_adapter.md  release_process.md  upcoming_features.md
tests/: test_repo_structure.py
(+223 files in other folders)
